--- a/.env.dist
+++ b/.env.dist
@@ -30,7 +30,7 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=shaxzad544@gmail.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="Fruit test task"
 MAIL_TO_SET=javascript544@gmail.com
 
